Fix a tag background image not showing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -261,7 +261,7 @@ body {
                 a {
                     text-decoration: none;
                     color: $font-color;
-                    background-image: linear-gradient($accent-color 100%);
+                    background-image: linear-gradient($accent-color, $accent-color);
                     background-repeat: no-repeat;
                     background-size: 100% 10%;
                     background-position: 0 95%;
